overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -362,7 +362,7 @@
 html,
 body {
   height: auto;
-  overflow-x: hidden;
+  /*overflow-x: hidden;*/
   min-width: 900px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
